...
    <string name="text_hint">Tap text here !</string>
    <string name="save_button_text">Save text</string>
    <string name="default_button_text">Save default text</string>
    <string name="empty_text">No text was entered… </string>

    <!-- SENDER/RECEIVER ACTIVITY-->
    <string name="default_text">something is saved !</string>
    <string name="saved_text_start">saved : %1$s</string>
    <string name="empty_text_error_message">Text was empty !</string>
    <string name="message_hint">Message…</string>
    <string name="number_hint">Number…</string>
    <string name="flag_text">Flag</string>
    <string name="sender_submit">Valid</string>
    <string name="previous">Previous</string>

...
