<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.SenderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:ems="10"
            android:hint="@string/message_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/numberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/flagSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flag_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"/>

        <Button
            android:id="@+id/senderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sender_submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>